<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Plants Manager</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search...</string>
    <string name="title_activity_plant_info">PlantInfoActivity</string>
    <string name="title_activity_sitios">Site</string>
    <string name="title_activity_add_plant">Add plant</string>
    <string name="title_activity_list_user_plant">List plants</string>
    <string name="title_dialog_no_name_plant">Error to insert plan</string>
    <string name="content_dialog_no_name_plant">The plant name must not be empty</string>
    <string name="faltaLocalizacion">You must indicate the position of the site on the map</string>
    <string name="advertencia">Warning</string>
    <string name="faltaNombreSitio">You must indicate a site name</string>
    <string name="localizacion">Location:</string>
    <string name="edit_site">Edit</string>
    <string name="site_name">Site</string>
    <string name="edit_site_name">Site name</string>
    <string name="site_type">Type:</string>
    <string name="site_save">Save</string>
    <string name="site_delete">Delete</string>
    <string name="site_subtitle">Number of plants</string>
    <string name="add_site">Push add button to add site</string>
    <string name="my_places">My Places</string>
    <string name="search_plant">Search Plant</string>
    <string name="share_app">Share app</string>
    <string name="transition_name_plant_img">transition:IMG-PLANT</string>
    <string name="find_your_plant">Find your plant</string>
    <string name="plant_name">Plant Name</string>
    <string name="add_to_list">+ Add to list</string>
    <string name="watering">Watering</string>
    <string name="sun">Sun</string>
    <string name="soil">Soil</string>
    <string name="prune">Prune</string>
    <string name="often">Often</string>
    <string name="it_doesnt_need">It doesn´t need</string>
    <string name="flowering">Flowering</string>
    <string name="location">Location</string>
    <string name="summer">Summer</string>
    <string name="outside">Outside</string>
    <string name="more_info_here">More info here!</string>
    <string name="informacion_adicional_de_la_planta">Additional plant information</string>
    <string name="add_plant">+ Add Plant</string>
    <string name="you_do_not_have_plants_yet">You do not have plants yet</string>
    <string name="editar">Edit</string>
    <string name="sitios">Sites</string>
    <string name="sitio">Site</string>
    <string name="nombre_del_sitio">Name of the site</string>
    <string name="tipo">Type:</string>
    <string name="guardar">Save</string>
    <string name="borrar">Delete</string>
    <string name="confirmacionBorrarSitio">Are you sure you want to delete the site?</string>
    <string name="confirmacion">Confirmation</string>
    <string name="aceptar">Accept</string>
    <string name="error">Error</string>
    <string name="no_posible_eliminar_sitio">The site could not be deleted</string>
    <string name="guardado">Saved</string>
    <string name="error_guardar">Error saving</string>
    <string name="rate_title">Please, rate our app.</string>
    <string name="rate_option_one">1. If you like My Plants, please give it five stars in Play Store.</string>
    <string name="rate_option_two">2. If you have any problems with the app, contact us.</string>
    <string name="rate_contact_author">CONTACT THE AUTHOR</string>
    <string name="rate_five_stars">RATE 5 STARS</string>
    <string name="author_email">empresa@gmail.com</string>
    <string name="subject_email">App My Plants: </string>
    <string name="text_email">Enter the text</string>
    <string name="send_email">Send Email</string>
    <string name="search">Search</string>
    <string name="warning_title">WARNING</string>
    <string name="warning_body">This application is a master project and is not 100% functional</string>
</resources>
